...
            "state" : "translated",
            "value" : "辨識歷史紀錄"
          }
        }
      }
    },
    "home.action.pharmacy" : {
      "extractionState" : "stale",
      "localizations" : {
        "zh-Hant" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "附近藥局"
          }
        }
      }
    },
    "home.action.prescription" : {
      "extractionState" : "stale",
...
        }
      }
    },
    "kg" : {

    },
    "medications.add.title" : {
      "localizations" : {
        "zh-Hant" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "新增用藥"
          }
        }
      }
    },
    "medications.calendar.title" : {
      "localizations" : {
...
    "pharmacy.tab.list" : {
      "extractionState" : "stale",
      "localizations" : {
        "zh-Hant" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "列表"
          }
        }
      }
    },
    "pharmacy.tab.map" : {
      "extractionState" : "stale",
...
    "tab.medications" : {
      "extractionState" : "manual",
      "localizations" : {
        "zh-Hant" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "我的用藥"
          }
        }
      }
    },
    "tab.profile" : {
      "extractionState" : "manual",
...
